--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,6 +32,16 @@
                         </a>
                     </li>
                     {% endif %}
+                    {% if site.linkedin_username %}
+                    <li>
+                        <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    {% endif %}
                     {% if site.github_username %}
                     <li>
                         <a href="https://github.com/{{ site.github_username }}">
@@ -42,8 +52,20 @@
                         </a>
                     </li>
                     {% endif %}
+                    {% if site.launchpad_username %}
+                    <li>
+                        <a href="https://launchpad.net/~{{ site.launchpad_username }}">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    {% endif %}
                 </ul>
-                <p class="copyright text-muted">Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}</p>
+                <p class="copyright text-muted">Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}<br/>
+                This blog is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC SA License</a>.
+                </p>
             </div>
         </div>
     </div>
