--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,9 @@ layout: default
                     {% if page.subtitle %}
                     <h2 class="subheading">{{ page.subtitle }}</h2>
                     {% endif %}
+                    {% comment %}
                     <span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}</span>
+                    {% endcomment %}
                 </div>
             </div>
         </div>
