--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -62,6 +62,7 @@ hr.small {
   .navbar-custom {
     background: transparent;
     border-bottom: 1px solid transparent;
+    text-shadow: 0 0 16px #000;
   }
   .navbar-custom .navbar-brand {
     color: white;
@@ -176,6 +177,7 @@ hr.small {
 }
 .intro-header .post-heading h1 {
   font-size: 35px;
+  text-shadow: 0 0 32px #000;
 }
 .intro-header .post-heading .subheading,
 .intro-header .post-heading .meta {
@@ -193,6 +195,7 @@ hr.small {
   font-style: italic;
   font-weight: 300;
   font-size: 20px;
+  text-shadow: 0 0 32px #000;
 }
 .intro-header .post-heading .meta a {
   color: white;
